# vn-text-trim

./: Cargo.toml  README.md  appveyor.yml  vn-text-trim.toml
config/: Cargo.toml
config/src/: lib.rs  re.rs
src/: cli.rs  dll.rs  main.rs
text/: Cargo.toml
text/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
